hphp/hack/test/typecheck/key_exists_refines_bad2.php.exp
File "key_exists_refines_bad2.php", line 7, characters 19-25:
Invalid argument (Typing[4110])
File "key_exists_refines_bad2.php", line 3, characters 24-29:
This is a string
File "key_exists_refines_bad2.php", line 5, characters 15-24:
It is incompatible with a mixed value because the field 'x' may be set to any type in this shape
